# refinery-forge

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
docs/: CURRENT_STATE.md  FORGE-POSTGRES.md  SUBSTRATE-LAYOUT.md
include/refinery/: ledger_interface.h  substrate_interface.h  tank_interface.h
scripts/: verify-golden.sh
src/forge/: bitmask_generator.cpp  ledger.cpp  ledger.h  substrate_emit.cpp  substrate_emit.h  tank.cpp  tank.h
